[package]
name = "chat_reader"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.4", features = ["blocking", "json"] }
lazy_static = "1.4.0"
serde_json = "1.0.64"
regex = "1.5.4"
roxmltree = "0.14.1"
termion = "1.5.6"

[profile.release]
lto = "fat"
opt-level = "z"